changing torch device to cuda

--- a/src/classifier.ipynb
+++ b/src/classifier.ipynb
@@ -393,7 +393,7 @@
     }
    ],
    "source": [
-    "device = torch.device(\"cpu\")\n",
+    "device = torch.device(\"cuda\")\n",
     "type(device)"
    ]
   },
