--- a/src/classifier.ipynb
+++ b/src/classifier.ipynb
@@ -763,15 +763,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3.4 LightGBM"
+    "The best parameters and best score obtained are the following:  \n",
+    "```\n",
+    "Best Parameters: {'n_estimators': 450, 'max_depth': 7, 'learning_rate': 0.1}  \n",
+    "Best Score (Macro Average F1): 0.17356889596239114\n",
+    "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -797,7 +794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
